# mathematics

./: .gitignore  Daily_Practice.md  README.md  README_Randomizer.md  TODO.md  randomizer.py
01_Concepts/01_Systems_of_Equations/: 01_Linear_Systems.md
01_Concepts/02_Vectors/: 01_Basics.md  02_Dot_Product.md  03_Coordinate_Systems.md  03_Cross_Product.md  04_Cross_Product.md  04_Scalar_Triple_Product.md  05_Scalar_Triple_Product.md  05_Vector_Projection.md  06_Coordinate_Systems.md  06_Vector_Projection.md
01_Concepts/03_Matrices/: 01_Basics.md  02_Matrix_Multiplication.md  03_Determinants.md  04_Matrix_Inversion.md  05_Orthogonal_Matrices.md  06_Rank_Nullity.md
01_Concepts/04_Transforms/: 01_Transformation_Matrices.md  02_Rotations.md  03_Reflections.md  04_Scales.md  05_Skews.md  06_Translations.md  07_Homogeneous_Coordinates.md  08_Matrix_Composition_4x4.md  08_Perspective_Projection.md  09_Quaternion_Intuition.md  09a_Parametric_Line_Equation.md  09a_Stereographic_Projection_Derivation.md  09b_Stereographic_Projection_Derivation.md  10_Quaternions.md
02_Exercises/01_Systems_of_Equations/Solutions/: S_Systems_Ranks.md
02_Exercises/02_Vectors/Questions/: Q_Angle_Dot_Product.md  Q_Projection_Matrix.md  Q_Projection_Properties.md  Q_Scalar_Triple_Product.md  (+1 more)
03_Code/: CMakeLists.txt  linear_algebra.cppm  main.cpp
03_Code/01_Systems_of_Equations/: 01_Linear_Systems.cpp  01_Linear_Systems.cppm
03_Code/02_Vectors/: 01_Basics.cpp  01_Basics.cppm  02_Dot_Product.cpp  02_Dot_Product.cppm  03_Coordinate_Systems.cpp  03_Coordinate_Systems.cppm  04_Cross_Product.cpp  04_Cross_Product.cppm  05_Scalar_Triple_Product.cpp  05_Scalar_Triple_Product.cppm  06_Vector_Projection.cpp  06_Vector_Projection.cppm
03_Code/03_Matrices/: 01_Basics.cpp  01_Basics.cppm  02_Matrix_Multiplication.cpp  02_Matrix_Multiplication.cppm  03_Determinants.cpp  03_Determinants.cppm  04_Matrix_Inversion.cpp  04_Matrix_Inversion.cppm  05_Orthogonal_Matrices.cpp  05_Orthogonal_Matrices.cppm
03_Code/04_Transforms/: 01_Transformation_Matrices.cpp  01_Transformation_Matrices.cppm  02_Rotations.cpp  02_Rotations.cppm  03_Reflections.cpp  03_Reflections.cppm  04_Scales.cpp  04_Scales.cppm  05_Skews.cppm  10_Quaternions.cppm
99_Templates/: Math_Formatting_Conventions.md  Template_Question.md  Template_Solution.md  __template__usage__.md
(+46 files in other folders)
